[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Pages/Home.gd" type="Script" id=1]
[ext_resource path="res://components/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/OpenProject.tscn" type="PackedScene" id=3]
[ext_resource path="res://icons/add-document.svg" type="Texture" id=4]
[ext_resource path="res://icons/folder-open.svg" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.211765, 0.188235, 0.384314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 282.0
margin_bottom = 363.0
rect_clip_content = true
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_clip_content = true
custom_constants/separation = 10

[node name="New" parent="Panel/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 262.0
rect_clip_content = true
icon = ExtResource( 4 )
label = "New"

[node name="Open" parent="Panel/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 63.0
margin_right = 262.0
margin_bottom = 116.0
rect_clip_content = true
icon = ExtResource( 5 )
label = "Open"

[node name="OpenProject" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="gui_input" from="Panel/VBoxContainer/New" to="." method="_on_New_gui_input"]
[connection signal="gui_input" from="Panel/VBoxContainer/Open" to="." method="_on_Open_gui_input"]
